@@ -33,8 +33,8 @@ namespace almondnamespace
 {
     // Version information as constexpr for compile-time evaluation
     constexpr int major = 0;
-    constexpr int minor = 62;
-    constexpr int revision = 7;
+    constexpr int minor = 70;
+    constexpr int revision = 0;
 
     inline constexpr std::string_view kEngineName = "Almond Shell";
 
